--- a/page1.html
+++ b/page1.html
@@ -12,7 +12,7 @@
 
 <div class="circle" id="red"></div>
 <div class="circle" id="yellow"></div>
-<div class="circle" id="green"></div>
-    
+<div class="circle" id="green"></div>`\]    
+     
 </body>
 </html>
